--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/josephcuellar2662/Pet-Clinic.git</developerConnection>
+        <developerConnection>scm:https://github.com/josephcuellar2662/Pet-Clinic.git</developerConnection>
       <tag>pet-clinic-0.0.1</tag>
   </scm>
 
