--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,14 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/josephcuellar2662/Pet-Clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com/josephcuellar2662/Pet-Clinic.gi</developerConnection>
       <tag>pet-clinic-0.0.1</tag>
   </scm>
 
