changes scm git

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com/josephcuellar2662/Pet-Clinic.gi</developerConnection>
+        <developerConnection>scm:git:git@github.com/josephcuellar2662/Pet-Clinic.git</developerConnection>
   </scm>
 
 </project>
