--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -48,7 +48,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com/josephcuellar2662/Pet-Clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:josephcuellar2662/Pet-Clinic.git</developerConnection>
     <tag>pet-clinic-0.0.1</tag>
   </scm>
 
