--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.5</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -49,7 +49,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:josephcuellar2662/Pet-Clinic.git</developerConnection>
-    <tag>pet-clinic-0.0.4</tag>
+    <tag>pet-clinic-0.0.5</tag>
   </scm>
 
 </project>
